# sambhar

./: .gitignore  README.md  sample_data.csv
backend/: README.md  pyproject.toml  railway.toml  requirements.txt
backend/app/: main.py
backend/app/schemas/: responses.py
backend/app/utils/: data_profiler.py  file_handler.py
backend/tests/: __init__.py  test_data_profiler.py
frontend/: package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: DataProfile.tsx  ErrorBoundary.tsx  FileUpload.tsx
scripts/: generate_sample_parquet.py  requirements.txt
